# AprVisual

./: .gitignore  AprVisual.sln  CLAUDE.md  README.md  build_benchmark.bat
.github/workflows/: pages.yml
MD/: 00_專案總覽.md  01_技術指南.md  07_參考資料與實作對照.md  INDEX.md  RETROSPECTIVE.md  閒聊_兩個AI_2026-05-13.md
MD/ISSUE/: 2026-07-09-apu_mixer-all-timeout-after-rebuild.md  2026-07-09-apu_mixer-timeout-root-cause-proof.md  2026-07-09-testrom-extraram-fix-plan.md
MD/REPORT/: perf-history-arm.html  perf-history.html
MD/S1/: 01_資料結構審查.md  02_效能分析_icache_method.md  03_NodeInfo_32B_vs_16B_快取AB.md  04_CSharp優化_Rust_sync審視.md
MD/S1a/: 00_S1a類比重構設計總綱.md  01_時序標註網表_物理延遲參數化_M3M6實作參考.md  02_解析工具箱_網站專文_shim退役_長期TODOLIST.md  02_雷點偵測六pattern_與雷分類全圖.md
MD/S2/: 00_INDEX.md
MD/chain/: s1a-hotpath-chain.html  s1a-methods-refcount.txt  s1a-wirecore-fields.txt
MD/cli/: S1_CLI_reference_EN.md  S1_CLI_完整參數手冊.md
MD/fullstory/: 2026070423-story.md  2026070513-story.md
MD/impl/: S1_引擎與加速演算法_完整描述.md  S1_移植任務清單.md  S1_貢獻分析_vs_MetalNES.md
MD/lowering/: 2026-07-01-aggressive-lowering-census-study.md  2026-07-01-aggressive-lowering-strategy4-macro-study.md
MD/mem-latency/: 00_實作清單與驗證.md  01_predicament_for_other_models.txt  2026-06-20_memory_latency_architecture_options.txt
MD/memory/: 00_baseline-and-run-recipes.md  01_ac-verdict-mechanism.md  02_s1-vs-s1a-and-forks.md  03_lessons-and-gotchas.md  04_s1a-verdicts-need-reverification.md  05_post-rerun-cli-param-cleanup.md  06_ppualereadfeedback-not-a-behavioral-shim.md  07_dl-shim-deferred-rationale.md  08_tonight-4engine-batch.md  09_aprnes-openbus-temperature-decay.md  README.md
MD/note/: 00_概觀_專案結構.md  01_模擬核心演算法.md  02_模組化網表系統.md  03_系統整合與週期推進.md  04_驗證與測試策略.md  05_對本專案的啟示.md  06_S1引擎演算法_資料結構與程式碼對照.md  2026-05-25-parallel-and-chip-diag-wrong-turns.md  2026-05-31-矩陣沒相依性為何不能GPU一次算.md  2026-05-31-網表當2D矩陣處理-SPICE矩陣法評估.md  2026-05-31-誰也做過軟體開關級NES模擬-結局如何.md  2026-06-07_同態免入隊剪枝_為何破壞正確性.md  2026-06-08-four-switch-level-simulators-comparison.md  2026-06-08-perfect6502-比較.md  2026-06-08-settle-pass分佈.md  2026-06-08-三個參考實作比較.md  2026-06-08-四個開關級模擬器比較.md  2026-06-08-提早停止settle的正確性實驗.md  2026-06-09-bfs-vs-dfs.md  2026-06-10-dominant-bypass-1bit-pinned-結論.md  2026-06-10-dominant-bypass-平行化設計與困難.md  2026-06-11-P5z零維護pin-skip嘗試_中性結論.md  2026-06-11-Sim-code-review-and-hotpath-evaluation.md  2026-06-11-範圍剪枝與cls-range-範圍化公式的適用條件.md  2026-06-11-論文準備_自我捕捉重排設計_先行研究對照.md  (+27 more)
WebSite/: bfs-dfs.html  breaking-the-ceiling.html  cache.html  calculator.html  ceiling.html  comparison.html  cross-cpu.html  design.html  die-timing.html  dominant-bypass.html  frontier.html  index.html  intuition.html  landscape.html  last-test.html  lineage.html  metalnes.html  mixed-signal.html  primer.html  prior-art.html  prunes.html  rcm-revival.html  s1-cli.html  s1a-cli.html  s1a.html  s2-gateabs.html  semantic-ceiling.html  study.html  threads.html
data/: README.md
experiment/rust-s1/: Cargo.toml  build.rs
experiment/rust-s1/src/: main.rs  perf.rs  snapshot.rs  wire.rs
experiment/rust-s2/: Cargo.toml
experiment/rust-s2/src/: main.rs  wire.rs
tools/: ab_bench.ps1  estimate_frames.py  eval_bitvector_queue.py  eval_unidir_demotion.py  ibs_bucket.py  pi-connect.sh  profile_s1_ab.bat  profile_s1_perfview.bat  release_benchmark.ps1  release_benchmark_s1a.ps1  send_mail.py  watch_run_mail.py  操作筆記_AMD_uProf.md  操作筆記_工具與部署.md
(+821 files in other folders)
