[package]
name = "wire_s2"
version = "0.1.0"
edition = "2021"

# AprVisual.S2 Rust fork — the S2 stage (netlist -> IR).
#
# STARTING POINT: a verbatim copy of the wire_s1 / AprVisual.S1 Rust fork (2026-05-31),
# kept in its own crate so S2 IR work does not mix into the S1 fork. At copy time S2 == S1
# (bit-identical engine; same NodeStates checksum). The inherited S1 switch-level engine is
# the bit-exact GOLDEN REFERENCE the IR must match per node. RULE: any IR direction must
# prove FASTER-than-S1 AND bit-exact on a minimal prototype BEFORE building further (memory:
# beat-s1-rule-and-ir-reattempt-plan). The S1-lineage notes below describe the inherited engine:
#
# Distilled from experiment/rust-poc/ after the L3-layout + inline-cascade series
# (2026-05-26 .. 2026-05-28). Includes ONLY the changes that empirically gave a
# positive or bit-identical-zero-cost result; drops post-S1 experimental branches.
#
# Kept (hardcoded on):
#   - L3 layout (ushort transistor_list, hot NodeInfo SoA, byte recalc_hash)
#   - SetHigh/Low/Float no-op skip + WriteBits/run_mem_handler batch settle
#   - Fast-path (recalc_node_fast for pure-logic-gnd nodes) ALWAYS on
#   - Recursive add_node_to_group (LLVM inlines; per memory the C# iterative-BFS
#     change was -1.3% on Rust, so we keep recursive here)
#
# Removed:
#   - --prune-merge        (negative ~5 pct post-inline-cascade)
#   - --parallel           (per-chip parallel: 15x SLOWER; see dead-end memory)
#   - LUT-TTL dispatch     (negative on C#; Rust never gained either)
#   - All chip-aware walk infrastructure (cpu/ppu scratch, buckets, serial_queue)
#
# No diag flags retained — keep bench/shot lean. The MaxSettlePasses cap still
# emits a stderr warning if a settle pass cannot converge (passive monitoring).

[dependencies]
png = "0.17"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false

[[bin]]
name = "wire_s2"
path = "src/main.rs"
